APB-10446 refined upscan, only production code
Signed-off-by: pav <173694350+paweldigital@users.noreply.github.com>

--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/ViewApplicationPage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/ViewApplicationPage.scala.html
@@ -86,7 +86,7 @@
   <h2 class="govuk-heading-m">@{messages(s"$key.amls.h2")}</h2>
   @amlsAnswers(
     key = "amlsCheckYourAnswers",
-    answers = request.agentApplication.getAmlsDetails,
+    amlsDetails = request.agentApplication.getAmlsDetails,
     canChange = false
   )
 
