--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/amls/CheckYourAnswersPage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/amls/CheckYourAnswersPage.scala.html
@@ -48,7 +48,7 @@
     <h1 class="govuk-heading-l">@messages(s"$key.title")</h1>
     @answerSummary(
         key,
-        answers = request.agentApplication.getAmlsDetails
+        amlsDetails = request.agentApplication.getAmlsDetails
     )
     <p class="govuk-body">
       @govukButton(Button(
