--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/amls/AmlsEvidenceUploadProgressPage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/amls/AmlsEvidenceUploadProgressPage.scala.html
@@ -16,19 +16,20 @@
 
 @import uk.gov.hmrc.govukfrontend.views.html.components._
 @import uk.gov.hmrc.agentregistrationfrontend.views.html.Layout
-@import uk.gov.hmrc.agentregistration.shared.upscan.UploadStatus
+@import uk.gov.hmrc.agentregistrationfrontend.model.upscan.UploadStatus
 
 @this(
     layout: Layout,
     govukButton: GovukButton
 )
+
 @(status: UploadStatus)(implicit messages: Messages, request: RequestHeader)
 
 
 @pageTitle =  @{status match {
     case UploadStatus.InProgress               => messages("fileUploadProgress.title")
     case s : UploadStatus.UploadedSuccessfully => messages("fileUploadProgress.complete.title")
-    case UploadStatus.Failed  => messages(s"fileUploadProgress.failed.title")
+    case _: UploadStatus.Failed  => messages(s"fileUploadProgress.failed.title")
 }}
 
 @layout(
@@ -40,8 +41,8 @@
     <p class="govuk-body">
         @status match {
             case UploadStatus.InProgress               => { @messages("fileUploadProgress.inProgress") }
-            case s : UploadStatus.UploadedSuccessfully => { @messages("fileUploadProgress.complete", s.name) }
-            case UploadStatus.Failed     => { @messages("fileUploadProgress.failed") }
+            case s : UploadStatus.UploadedSuccessfully => { @messages("fileUploadProgress.complete", s.fileName) }
+            case _: UploadStatus.Failed     => { @messages("fileUploadProgress.failed") }
         }
     </p>
 
@@ -59,7 +60,7 @@
                     content = Text(messages("common.continue"))
                 ))
             }
-          case _ => {
+          case  _: UploadStatus.Failed => {
               @govukButton(Button(
                   href = Some(AppRoutes.apply.amls.AmlsEvidenceUploadController.show.url),
                   content = Text(messages("common.tryAgain"))
