APB-10446 further improvements
Signed-off-by: pav <173694350+paweldigital@users.noreply.github.com>

--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/amls/AmlsEvidenceUploadProgressPage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/amls/AmlsEvidenceUploadProgressPage.scala.html
@@ -62,7 +62,7 @@
             }
           case  _: UploadStatus.Failed => {
               @govukButton(Button(
-                  href = Some(AppRoutes.apply.amls.AmlsEvidenceUploadController.show.url),
+                  href = Some(AppRoutes.apply.amls.AmlsEvidenceUploadController.showAmlsEvidenceUploadPage.url),
                   content = Text(messages("common.tryAgain"))
               ))
           }
