--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/amls/AmlsEvidenceUploadPage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/amls/AmlsEvidenceUploadPage.scala.html
@@ -101,7 +101,7 @@
         <div id="upload-handling">
             <span
             id="file-upload-progress"
-            data-check-upload-status-url="@{AppRoutes.apply.amls.AmlsEvidenceUploadController.checkUploadStatus.url}"
+            data-check-upload-status-url="@{AppRoutes.apply.amls.AmlsEvidenceUploadController.checkUploadStatusJs.url}"
             data-success="@{appConfig.thisFrontendBaseUrl}@{AppRoutes.apply.amls.AmlsEvidenceUploadController.showUploadResult.url}"
             data-check-upload-status-max-attempts="@{appConfig.Upscan.checkUploadStatusMaxAttempts}"
             data-check-upload-status-interval-ms="@{appConfig.Upscan.checkUploadStatusInterval.toMillis}"
