--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/amls/UpscanErrorPage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/amls/UpscanErrorPage.scala.html
@@ -36,7 +36,7 @@
   <p class="govuk-body">@messages(s"$key.${errorCode.toString}.message")</p>
   <p class="govuk-body">
    @govukButton(Button(
-      href = Some(AppRoutes.apply.amls.AmlsEvidenceUploadController.show.url),
+      href = Some(AppRoutes.apply.amls.AmlsEvidenceUploadController.showAmlsEvidenceUploadPage.url),
       content = Text(messages("common.tryAgain"))
    ))
   </p>
