--- a/app/uk/gov/hmrc/agentregistrationfrontend/testonly/views/TestOnlyHubPage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/testonly/views/TestOnlyHubPage.scala.html
@@ -39,8 +39,7 @@
         <ul>
             <li><a class="govuk-link" href="@AppRoutes.testOnly.FastForwardController.show">fast forward links</a></li>
             <li><a class="govuk-link" href="@AppRoutes.testOnly.TestOnlyController.showAgentApplication">showAgentApplication</a></li>
-            <li><a class="govuk-link" href="@AppRoutes.testOnly.TestOnlyController.setUploadToComplete()">set-upload-to-complete</a></li>
-            <li><a class="govuk-link" href="@AppRoutes.testOnly.TestOnlyController.setUploadToComplete()">get-link-id</a></li>
+            <li><a class="govuk-link" href="@AppRoutes.testOnly.TestOnlyController.makeTestSubmittedApplication()">get-link-id</a></li>
         </ul>
     </p>
 }
