APB-10497 sync from FE

--- a/app/uk/gov/hmrc/agentregistrationfrontend/testonly/views/GrsStub.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/testonly/views/GrsStub.scala.html
@@ -70,12 +70,12 @@
             @companyProfileInput
         }
         @* Includes Scottish Partnership *@
-        @if(businessType === GeneralPartnership) {
+        @if(Seq(ScottishPartnership, GeneralPartnership).contains(businessType)) {
             @sautrInput
             @partnershipPostcodeInput
         }
         @* Includes Limited and Scottish Limited Partnerships *@
-        @if(businessType === LimitedLiabilityPartnership) {
+        @if(Seq(LimitedLiabilityPartnership, LimitedPartnership, ScottishLimitedPartnership).contains(businessType)) {
             @sautrInput
             @partnershipPostcodeInput
             @companyProfileInput
