--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/ConfirmationPage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/ConfirmationPage.scala.html
@@ -14,6 +14,7 @@
  * limitations under the License.
  *@
 
+@import uk.gov.hmrc.agentregistration.shared.BusinessType
 @import uk.gov.hmrc.agentregistrationfrontend.action.AgentApplicationRequest
 @import uk.gov.hmrc.agentregistrationfrontend.config.AppConfig
 @import uk.gov.hmrc.agentregistrationfrontend.views.html.Layout
@@ -37,10 +38,19 @@
 @key = @{"confirmation"}
 @pageTitle = @{messages(s"$key.title")}
 @provideDetailsLink = @{appConfig.applicationLink(request.agentApplication.linkId.value).toString}
-@applicantRole = @{request.agentApplication.asLlpApplication.getApplicantContactDetails.applicantName.role.toString}
 @templateScripts = {
   <script src="@{controllers.routes.Assets.versioned("javascripts/copy-button.js")}" @{CSPNonce.attr}></script>
 }
+@businessType = @{request.agentApplication.businessType match {
+  case BusinessType.SoleTrader => "SoleTrader"
+  case BusinessType.Partnership.LimitedLiabilityPartnership => "Llp"
+  case BusinessType.LimitedCompany => "LimitedCompany"
+  case BusinessType.Partnership.GeneralPartnership => "GeneralPartnership"
+  case BusinessType.Partnership.LimitedPartnership => "LimitedPartnership"
+  case BusinessType.Partnership.ScottishLimitedPartnership => "ScottishLimitedPartnership"
+  case BusinessType.Partnership.ScottishPartnership => "ScottishPartnership"
+  case _ => "other"
+}}
 @templateStyles = {
   <link rel="stylesheet" href="@{controllers.routes.Assets.versioned("stylesheets/copy-button.css")}" @{CSPNonce.attr}>
   <style @{CSPNonce.attr}>
@@ -66,10 +76,10 @@
     @{messages(s"$key.whatNext.h2")}
   </h2>
   <p class="govuk-body">
-    @{messages(s"$key.whatNext.p1", entityName)}
+    @{messages(s"$key.whatNext.p1.$businessType.${request.agentApplication.getUserRole.toString}", entityName)}
   </p>
   <p class="govuk-body">
-    @{messages(s"$key.whatNext.p2.$applicantRole")}
+    @{messages(s"$key.whatNext.p2.$businessType.${request.agentApplication.getUserRole.toString}")}
   </p>
   <p class="govuk-body govuk-!-font-weight-bold">@provideDetailsLink</p>
   @copyButton(clip = provideDetailsLink)
@@ -86,7 +96,7 @@
   </p>
   <ul class="govuk-list govuk-list--bullet">
     <li>@{messages(s"$key.checkProgress.bullet1")}</li>
-    <li>@{Html(messages(s"$key.checkProgress.bullet2", request.agentApplication.asLlpApplication.getApplicantContactDetails.getVerifiedEmail.value))}</li>
+    <li>@{Html(messages(s"$key.checkProgress.bullet2", request.agentApplication.getApplicantContactDetails.getVerifiedEmail.value))}</li>
   </ul>
 
   <p class="govuk-body govuk-!-display-none-print">
