APB-10575 organising packages
Signed-off-by: pav <173694350+paweldigital@users.noreply.github.com>

--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/aboutyourbusiness/AnswerSummary.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/aboutyourbusiness/AnswerSummary.scala.html
@@ -14,7 +14,7 @@
  * limitations under the License.
  *@
 
-@import uk.gov.hmrc.agentregistration.shared.BusinessDetailsLlp
+@import uk.gov.hmrc.agentregistration.shared.businessdetails.BusinessDetailsLlp
 
 @this(
   govukSummaryList: GovukSummaryList
