--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/aboutyourbusiness/ScottishLimitedPartnership/AnswerSummary.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/aboutyourbusiness/ScottishLimitedPartnership/AnswerSummary.scala.html
@@ -14,7 +14,7 @@
  * limitations under the License.
  *@
 
-@import uk.gov.hmrc.agentregistration.shared.BusinessDetailsPartnership
+@import uk.gov.hmrc.agentregistration.shared.businessdetails.BusinessDetailsPartnership
 @import uk.gov.hmrc.agentregistration.shared.UserRole
 
 @this(
