APB-10575 align business details model (#137)
* APB-10575 organise code before removing redundant classes

Signed-off-by: pav <173694350+paweldigital@users.noreply.github.com>

* APB-10575 refactor business details models

Signed-off-by: pav <173694350+paweldigital@users.noreply.github.com>

* APB-10575 dead code

Signed-off-by: pav <173694350+paweldigital@users.noreply.github.com>

* APB-10575 organising packages

Signed-off-by: pav <173694350+paweldigital@users.noreply.github.com>

* APB-10575 organising packages

Signed-off-by: pav <173694350+paweldigital@users.noreply.github.com>

---------

Signed-off-by: pav <173694350+paweldigital@users.noreply.github.com>

--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/aboutyourbusiness/ScottishPartnership/AnswerSummary.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/apply/aboutyourbusiness/ScottishPartnership/AnswerSummary.scala.html
@@ -14,7 +14,7 @@
  * limitations under the License.
  *@
 
-@import uk.gov.hmrc.agentregistration.shared.BusinessDetailsPartnership
+@import uk.gov.hmrc.agentregistration.shared.businessdetails.BusinessDetailsScottishPartnership
 @import uk.gov.hmrc.agentregistration.shared.UserRole
 
 @this(
@@ -23,7 +23,7 @@
 
 @(
         key: String,
-        answers: BusinessDetailsPartnership,
+        answers: BusinessDetailsScottishPartnership,
         userRole: UserRole,
         canChange: Boolean = true,
         entityName: String
