--- a/app/uk/gov/hmrc/agentregistrationfrontend/testonly/views/TestOnlyHubPage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/testonly/views/TestOnlyHubPage.scala.html
@@ -37,8 +37,10 @@
     <h1 class="govuk-heading-xl">Test Only Hub</h1>
     <p class="govuk-body">
         <ul>
+            <li><a class="govuk-link" href="@AppRoutes.apply.AgentApplicationController.startRegistration">Agent Start Registration</a></li>
             <li><a class="govuk-link" href="@AppRoutes.testOnly.FastForwardController.show">fast forward links</a></li>
             <li><a class="govuk-link" href="@AppRoutes.testOnly.TestOnlyController.showAgentApplication">showAgentApplication</a></li>
+            <li><a class="govuk-link" href="@AppRoutes.testOnly.TestOnlyController.showProvidedDetails">showProvidedDetails</a></li>
             <li><a class="govuk-link" href="@AppRoutes.testOnly.TestOnlyController.makeTestSubmittedApplication()">get-link-id</a></li>
         </ul>
     </p>
