--- a/app/uk/gov/hmrc/agentregistrationfrontend/testonly/views/TestOnlyHubPage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/testonly/views/TestOnlyHubPage.scala.html
@@ -39,6 +39,7 @@
         <ul>
             <li><a class="govuk-link" href="@AppRoutes.apply.AgentApplicationController.startRegistration">Agent Start Registration</a></li>
             <li><a class="govuk-link" href="@AppRoutes.testOnly.FastForwardController.show">fast forward links</a></li>
+            <li><a class="govuk-link" href="@AppRoutes.testOnly.TestOnlyController.showPlaySession">showPlaySession</a></li>
             <li><a class="govuk-link" href="@AppRoutes.testOnly.TestOnlyController.showAgentApplication">showAgentApplication</a></li>
             <li><a class="govuk-link" href="@AppRoutes.testOnly.TestOnlyController.showProvidedDetails">showProvidedDetails</a></li>
             <li><a class="govuk-link" href="@AppRoutes.testOnly.TestOnlyController.makeTestSubmittedApplication()">get-link-id</a></li>
