APB-10601-remove-save-and-continue-button
Removed the save and continue button from 3 screens in the Provide Detiails journey.

--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/providedetails/memberconfirmation/MemberApproveApplicationPage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/providedetails/memberconfirmation/MemberApproveApplicationPage.scala.html
@@ -16,7 +16,7 @@
 
 @import uk.gov.hmrc.agentregistrationfrontend.action.providedetails.llp.MemberProvideDetailsRequest
 @import uk.gov.hmrc.agentregistrationfrontend.views.html.Layout
-@import uk.gov.hmrc.agentregistrationfrontend.views.html.apply.partials.ContinueOrSaveForLater
+@import uk.gov.hmrc.agentregistrationfrontend.views.html.providedetails.partials.SaveAndContinue
 @import uk.gov.hmrc.govukfrontend.views.html.components.implicits.RichRadios
 @import uk.gov.hmrc.agentregistrationfrontend.forms.YesNo
 @import uk.gov.hmrc.agentregistrationfrontend.forms.MemberApproveApplicationForm
@@ -27,7 +27,7 @@
         formWithCSRF: FormWithCSRF,
         govukButton: GovukButton,
         govukInsetText: GovukInsetText,
-        continueOrSaveForLater: ContinueOrSaveForLater
+        saveAndContinue: SaveAndContinue
 )
 
 
@@ -72,6 +72,6 @@
                 )
         ).withFormField(form(key)))
 
-        @continueOrSaveForLater()
+        @saveAndContinue()
     }
 }
