--- a/app/uk/gov/hmrc/agentregistrationfrontend/views/providedetails/memberconfirmation/MemberSaUtrPage.scala.html
+++ b/app/uk/gov/hmrc/agentregistrationfrontend/views/providedetails/memberconfirmation/MemberSaUtrPage.scala.html
@@ -19,7 +19,7 @@
 @import uk.gov.hmrc.agentregistrationfrontend.action.providedetails.llp.MemberProvideDetailsRequest
 @import uk.gov.hmrc.agentregistrationfrontend.forms.MemberSaUtrForm
 @import uk.gov.hmrc.agentregistrationfrontend.views.html.Layout
-@import uk.gov.hmrc.agentregistrationfrontend.views.html.apply.partials.ContinueOrSaveForLater
+@import uk.gov.hmrc.agentregistrationfrontend.views.html.providedetails.partials.SaveAndContinue
 @import uk.gov.hmrc.govukfrontend.views.html.components.implicits.RichRadios
 @import uk.gov.hmrc.govukfrontend.views.Implicits.RichInput
 @import uk.gov.hmrc.agentregistrationfrontend.forms.YesNo
@@ -30,7 +30,7 @@
         govukInput: GovukInput,
         formWithCSRF: FormWithCSRF,
         govukButton: GovukButton,
-        continueOrSaveForLater: ContinueOrSaveForLater
+        saveAndContinue: SaveAndContinue
 )
 
 @(
@@ -82,6 +82,6 @@
                 )
         ).withFormField(form(key)))
 
-        @continueOrSaveForLater()
+        @saveAndContinue()
     }
 }
